logs/watchdog_20251011_1630.log
[11/10/2025 16:30:01,90] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 16:30:02,27] END WATCHDOG 
